@@ -1,7 +1,7 @@
 bin_PROGRAMS = pathspell
 pathspell_SOURCES = pathspell.cpp \
 xml.h xml.cpp xmlspelllist.cpp \
-spell.h spell.cpp school.cpp level.cpp components.cpp savingthrow.cpp spellresistance.cpp \
+spell.h spell.cpp school.cpp level.cpp components.cpp savingthrow.cpp spellresistance.cpp target.cpp\
 gtkwindow.h gtkwindow.cpp \
 error.h \
 strmanip.h strmanip.cpp
